--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,72 @@
 .wrong {
   border: 3px solid red;
 }
+
+* {
+  margin: 0;
+}
+
+.triviaCircle {
+  align-items: center;
+  background: var(--purple);
+  border: 6px solid var(--light-green);
+  border-radius: 50%;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25) , inset 0 4px 35px #1f0e3f;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  font-family: Epilogue , sans-serif;
+  height: 231.26px;
+  justify-content: center;
+  width: 230px;
+}
+
+.triviaImages {
+  display: flex;
+  gap: 0.5vh;
+}
+
+.triviaGreen {
+  padding-bottom: 20%;
+}
+
+.triviaText {
+  font-size: 57.113px;
+  font-weight: 400;
+  letter-spacing: 0.085em;
+  padding-bottom: 1vh;
+}
+
+.triviaTriangle {
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-top: 40px solid #2fc18c;
+  bottom: 14px;
+  height: 0;
+  left: 95px;
+  position: relative;
+  width: 0;
+  z-index: -1;
+}
+
+.background-container {
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  z-index: -2;
+}
+
+.background-gradient {
+  background: linear-gradient(180deg, #3c1b7a 0%, black 100%);
+  height: 100%;
+  opacity: 0.94;
+  position: absolute;
+  width: 100%;
+}
+
+.backgorund-image {
+  position: absolute;
+  width: 100%;
+  z-index: -1;
+}
